*gitlab-pages-0.5.1 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.5.1.ebuild:
  www-servers/gitlab-pages:  Add version 0.5.1, dependency of gitlab-ce-9.4.6.

*gitlab-pages-0.4.4 (08 Sep 2017)

  08 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.4.4.ebuild,
  -gitlab-pages-0.4.3.ebuild:
  www-servers/gitlab-pages:  Add version 0.4.4, dependency of gitlab-ce-9.3.11.

*gitlab-pages-0.5.0 (09 Jul 2017)

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.5.0.ebuild:
  www-servers/gitlab-pages:  Add ebuild for gitlab-pages-0.5.0

  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
  -gitlab-pages-0.3.2-r1.ebuild:
  www-servers/gitlab-pages:  Purge obsolete versions

*gitlab-pages-0.4.3 (17 Jun 2017)

  17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.4.3.ebuild:
  www-servers/gitlab-pages:  Add version 0.4.3

*gitlab-pages-0.4.0 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-0.4.0.patch, +gitlab-pages-0.4.0.ebuild:
  www-servers/gitlab-pages:   added ebuild for gitlab-pages-0.4.0

*gitlab-pages-0.3.2-r1 (13 Mar 2017)

  13 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-pages-0.3.2-r1.ebuild:
  www-servers/gitlab-pages:   added arches ~x86, ~arm, ~arm64; otherwise repoman
  would complain about the most recent gitlab-ce ebuilds.

  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  files/gitlab-pages-0.3.2.conf, files/gitlab-pages-0.3.2.init:
  www-servers/gitlab-pages:   Fixed buggy configuration: - Logfile was not
  accessible - Init script didn't start nor stop the daemon correctly

  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-pages-0.3.2.ebuild:
  www-servers/gitlab-pages:   Fixed the creation ofthe new user (syntax).

*gitlab-pages-0.3.2 (07 Mar 2017)

  07 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/0001-fix-Makefile-0.3.2.patch, +files/gitlab-pages-0.3.2.conf,